[gd_scene load_steps=4 format=2]

[ext_resource path="res://images/end.jpg" type="Texture" id=1]
[ext_resource path="res://Game over - finish.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.862745 )

[node name="Game over - finish" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 2.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 555.5, 318.5 )
scale = Vector2( 0.391734, 0.346049 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 506, 318.5 )
scale = Vector2( 0.356764, 0.346049 )
texture = ExtResource( 1 )

[node name="PLAYAGAIN" type="Button" parent="."]
margin_left = 617.0
margin_top = 360.0
margin_right = 629.0
margin_bottom = 380.0
rect_scale = Vector2( 8.31483, 2.04124 )
flat = true

[node name="MAINPAGE" type="Button" parent="."]
margin_left = 845.0
margin_top = 359.0
margin_right = 857.0
margin_bottom = 379.0
rect_scale = Vector2( 7.64585, 1.92586 )
rect_pivot_offset = Vector2( 17.6566, -1.0385 )
flat = true

[node name="EXIT" type="Button" parent="."]
margin_left = 832.0
margin_top = 361.0
margin_right = 844.0
margin_bottom = 381.0
rect_scale = Vector2( 6.07895, 1.86486 )
flat = true

[node name="SUBMIT" type="Button" parent="."]
margin_left = 860.0
margin_top = 524.0
margin_right = 872.0
margin_bottom = 544.0
rect_scale = Vector2( 3.61927, 0.897828 )
flat = true

[node name="Sprite2" type="Sprite" parent="."]

[connection signal="pressed" from="PLAYAGAIN" to="." method="_on_PLAYAGAIN_pressed"]
[connection signal="pressed" from="MAINPAGE" to="." method="_on_MAINPAGE_pressed"]
[connection signal="pressed" from="EXIT" to="." method="_on_EXIT_pressed"]
